cmake_minimum_required( VERSION 2.8 )
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
SET(BULLET_VERSION 2.85)
SET(BULLET_PHYSICS_SOURCE_DIR /Users/chengxuz/barrel/bullet/bullet3/ CACHE STRING "Some user-specified option")
SET(BULLET_ROOT /usr/local/ CACHE STRING "Some other user-specified option")
SET(BOOST_ROOT /usr/local/ CACHE STRING "Some other user-specified option")
IF(APPLE)
    SET(DYLIB_SUFFIX dylib)
ELSEIF(UNIX)
    SET(DYLIB_SUFFIX so)
ENDIF()

FIND_PACKAGE( Bullet REQUIRED )
include_directories(${BULLET_INCLUDE_DIRS})
FIND_PACKAGE( Boost 1.40 COMPONENTS program_options REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
FIND_PACKAGE(HDF5 REQUIRED)
IF(APPLE)
    SET(HDF5_SELF_INCLUDE ${HDF5_INCLUDE_DIRS})
    SET(HDF5_SELF_LIBRARY /usr/local/lib/libhdf5.dylib;/usr/local/lib/libhdf5_cpp.dylib)
ELSEIF(UNIX)
    SET(HDF5_SELF_INCLUDE ${HDF5_INCLUDE_DIR})
    SET(HDF5_SELF_LIBRARY hdf5 hdf5_cpp)
    #SET(HDF5_SELF_LIBRARY /usr/lib/x86_64-linux-gnu/hdf5/serial/lib/libhdf5.so;/usr/lib/x86_64-linux-gnu/hdf5/serial/lib/libhdf5_cpp.so) # Special for neuroaicluster
ENDIF()
INCLUDE_DIRECTORIES( ${HDF5_SELF_INCLUDE} )

SUBDIRS( HelloWorld BasicDemo )
SUBDIRS( Constraints )
SUBDIRS( ExampleBrowser ThirdPartyLibs/Gwen ThirdPartyLibs/BussIK OpenGLWindow )
